--- a/src/styles/components/Profile.module.css
+++ b/src/styles/components/Profile.module.css
@@ -23,3 +23,9 @@
     font-size: 1rem;
     margin-top: 0.5rem;
 }
+
+.profileContainer div p img{
+    width: 15px;
+    height: 17px;
+    margin-right: 0.5rem;
+}
