--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -60,6 +60,23 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover{
+.countdownButton:not(:disabled):hover{
     background: var(--blue-dark);
 }
+
+.countdownButton:disabled{
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
+}
+
+.btnActive{
+    background: var(--white);
+    color: var(--title);
+}
+
+.btnActive:hover{
+    background: var(--red);
+    color: var(--white);
+}
+
