--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -89,8 +89,6 @@
     border: 0;
     border-radius: 5px;
 
-    color: var(--white);
-
     font-size: 1rem;
     font-weight: 600;
 
@@ -98,15 +96,17 @@
 }
 
 .challengeActive footer button.challengeFailedButton{
-    background: var(--red);
+    background: #eb002733;
+    color: var(--red);
 }
 
 .challengeActive footer button.challengeSucceededButton{
-    background: var(--green);
+    background: #4cd62b33;
+    color: #39a11f;
 }
 
 .challengeActive footer button:hover{
-    filter: brightness(0.9);
+    filter: brightness(0.8);
 }
 
 
